# garminconnectconnect

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SKILL.md  alembic.ini  docker-compose.yml  pyproject.toml  run_claude.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 002_add_new_endpoint_tables.py  003_add_scheduled_workouts_table.py  004_complete_data_extraction.py  005_add_biometrics_gear_laps.py  006_continuous_aggregates.py
grafana/dashboards/: garmin-activities.json  garmin-health.json  garmin-trends.json
nginx/: garmin-connect.conf
scripts/: generate-certs.sh  generate-secrets.sh
src/garminconnect/: __init__.py  __main__.py  config.py
tests/: test_api_client.py  test_auth.py  test_auth_expanded.py  test_config.py  test_date_ranges.py  test_extractors.py  test_extractors_expanded.py  test_extractors_new_endpoints.py  test_integration.py  test_mcp_auth.py  test_mcp_compare.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_server_expanded.py  test_models.py  test_models_expanded.py  test_repository.py  test_repository_expanded.py  test_retry.py  test_scheduler.py  test_sync_pipeline.py  test_sync_pipeline_expanded.py  test_workout_builder.py
tests/fixtures/: activity_detail.json  activity_gps.json  activity_laps.json  activity_weather.json  badges.json  blood_pressure.json  body_battery_events.json  cycling_ftp.json  daily_summary.json  endurance_score.json  floors.json  gear.json  heart_rate.json  hill_score.json  hydration_daily.json  intensity_minutes.json  lactate_threshold.json  (+8 more)
(+37 files in other folders)
